--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sendgrid/mail": "^6.1.4",
-    "express": "^4.15.3",
+    "@sendgrid/mail": "^6.2.1",
+    "express": "^4.16.3",
     "history": "^4.7.2",
     "material-ui": "^0.20.0",
-    "mongoose": "^4.11.5",
+    "mongoose": "^4.13.12",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.7",
@@ -25,19 +25,20 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "source-map": "^0.7.2",
     "superagent": "^3.5.2"
   },
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "0.26.1",
-    "style-loader": "0.13.1",
     "extract-text-webpack-plugin": "1.0.1",
+    "html-webpack-plugin": "2.22.0",
     "node-sass": "4.5.0",
     "sass-loader": "6.0.1",
-    "html-webpack-plugin": "2.22.0",
+    "style-loader": "0.13.1",
     "webpack": "^2.6.1"
   }
 }
